<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by RadenMas on 14/4/2022.
  ~ Copyright (c) 2022.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/img_register" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/register"
            android:textColor="@color/primary_text"
            android:textSize="28sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/roboto"
            android:text="@string/register_desc"
            android:textColor="@color/primary_text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etFullName"
            style="@style/EditTextAuth"
            android:layout_marginTop="24dp"
            android:drawableStart="@drawable/ic_user"
            android:hint="@string/full_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etEmail"
            style="@style/EditTextAuth"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etPhone"
            style="@style/EditTextAuth"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_phone"
            android:hint="@string/phone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/etPassword"
            style="@style/EditTextAuth"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            style="@style/ButtonAuth"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/primary"
            android:text="@string/next" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/roboto"
                android:text="@string/have_account"
                android:textColor="@color/secondary_text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                android:text="@string/login"
                android:textColor="@color/primary"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>